# EnglishHelper

./: README.md  db.sqlite3  manage.py  pyproject.toml
EnglishHelper/: asgi.py  settings.py  urls.py  wsgi.py
src/: admin.py  models.py  urls.py  views.py
src/migrations/: 0001_initial.py
templates/: Home.html  base.html  card_template.html  phrasal_verbs.html
