[tool.poetry]
name = "englishhelper"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yar1k_k12@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
ruff = "^0.1.14"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
